--- a/src/screens/transactionDetail/styles.scss
+++ b/src/screens/transactionDetail/styles.scss
@@ -4,6 +4,10 @@
   justify-content: center;
   align-items: center;
 
+  h2 {
+    margin-top: 30px;
+  }
+
   .inner-container {
     border: 1px solid black;
     padding: 20px;
